ks8/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          # - path: /api/service
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: node-service
          #       port:
          #         number: 8081
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 9999
          # - path: /login/oauth2
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: backend
          #       port:
          #         number: 9999

          - path: /login
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 9999
          - path: /oauth2/success
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 9999

          - path: /owner
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000

          - path: /manager
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000

          - path: /user
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000

          - path: /_next
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000
